# bert_text_classifier

./: pyproject.toml
src/: download.sh
