[project]
name = "bert-classification-tutorial"
version = "0.2.0"
description = ""
authors = [
    { name = "hppRC", email = "hpp.ricecake@gmail.com" }
]
dependencies = [
    "torch>=2.0.0",
    "transformers[ja,sentencepiece]>=4.30.0",
    "numpy>=1.25.0",
    "pandas>=2.0.3",
    "more-itertools>=9.1.0",
    "scikit-learn>=1.2.2",
    "tqdm>=4.65.0",
    "typed-argument-parser>=1.8.1",
]
requires-python = ">=3.10.0"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
